--- a/XLsn0wAnimation/Base.lproj/Main.storyboard
+++ b/XLsn0wAnimation/Base.lproj/Main.storyboard
@@ -34,6 +34,14 @@
                                     <action selector="frameAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bge-ep-Dcq"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Z1-sq-wbB">
+                                <rect key="frame" x="16" y="489" width="79" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="UIView动画"/>
+                                <connections>
+                                    <action selector="UIViewAnimation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="U20-oU-R9z"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
